--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - 8161:8161
   platform:
     image: ld4p/trellis-ext-db:latest
+    environment:
+      TRELLIS_BASE_URL: http://platform:8080
     ports:
       - 8080:8080
       - 8081:8081
@@ -21,7 +23,7 @@ services:
     environment:
       INDEX_HOST: search
       BROKER_HOST: broker
-    command: dockerize -wait tcp://broker:61613 -wait tcp://search:9200 -timeout 120s npm start
+    command: dockerize -wait tcp://broker:61613 -wait tcp://search:9200 -timeout 180s npm start
     depends_on:
       - broker
       - search
@@ -36,9 +38,23 @@ services:
       - 5432:5432
   search:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.3.2
+    entrypoint:
+      - elasticsearch
+      - -Ehttp.port=9200
+      - -Ehttp.cors.enabled=true
+      - -Ehttp.cors.allow-origin=http://searchui:1358,http://localhost:1358,http://127.0.0.1:1358
+      - -Ehttp.cors.allow-headers=X-Requested-With,X-Auth-Token,Content-Type,Content-Length,Authorization
+      - -Ehttp.cors.allow-credentials=true
+    user: elasticsearch
     ports:
       - 9200:9200
       - 9300:9300
+  searchui:
+    image: appbaseio/dejavu:latest
+    ports:
+      - 1358:1358
+    depends_on:
+      - search
   migration:
     image: ld4p/trellis-ext-db:latest
     command: ["/opt/trellis/bin/trellis-db", "db", "migrate", "/opt/trellis/etc/config.yml"]
