--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,10 +23,21 @@ services:
     environment:
       INDEX_HOST: search
       BROKER_HOST: broker
-    command: dockerize -wait tcp://broker:61613 -wait tcp://search:9200 -timeout 180s npm start
+    command: dockerize -wait tcp://broker:61613 -wait tcp://search:9200 -timeout 2m npm start
     depends_on:
       - broker
       - search
+  integration:
+    build:
+      context: .
+    environment:
+      INDEX_HOST: search
+      BROKER_HOST: broker
+    command: dockerize -wait tcp://broker:61613 -wait tcp://search:9200 -wait tcp://platform:8080 -timeout 2m npm run integration
+    depends_on:
+      - broker
+      - search
+      - platform
   database:
     image: postgres:latest
     environment:
@@ -45,6 +56,8 @@ services:
       - -Ehttp.cors.allow-origin=http://searchui:1358,http://localhost:1358,http://127.0.0.1:1358
       - -Ehttp.cors.allow-headers=X-Requested-With,X-Auth-Token,Content-Type,Content-Length,Authorization
       - -Ehttp.cors.allow-credentials=true
+      - -Etransport.host=localhost
+      - -Ebootstrap.system_call_filter=false
     user: elasticsearch
     ports:
       - 9200:9200
