--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "ci": "npm run lint && npm run coverage",
     "coverage": "jest --color --coverage",
     "dev-start": "nodemon --exec babel-node runner.js",
+    "integration": "jest --color --testRegex=\\.integration\\.js$",
     "lint": "eslint --color -c .eslintrc.yml --ext js .",
     "start": "babel-node runner.js",
     "test": "jest --color"
   },
   "dependencies": {
+    "@babel/runtime": "^7.3.4",
     "elasticsearch": "^15.4.1",
     "stomp-client": "^0.9.0",
     "superagent": "^4.1.0"
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@babel/core": "^7.3.3",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.3.4",
     "@babel/preset-env": "^7.3.1",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
