Increase timeout values and allow integration tests to run both within and without containerland

--- a/.eslintrc-todo.yml
+++ b/.eslintrc-todo.yml
@@ -4,3 +4,8 @@ overrides:
       no-global-assign: off
     files:
       - runner.js
+  -
+    rules:
+      no-extra-boolean-cast: off
+    files:
+      - __tests__/pipeline.integration.js
