--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
             ./cc-test-reporter after-build --exit-code $?
       - run:
           name: Spin up containers for integration testing
-          command: docker-compose up -d pipeline platform
+          command: docker-compose up -d pipeline
       - run:
           name: Run integration tests
           command: docker-compose up integration
