Handle updates, creates, and deletes in pipeline
Includes:

* Handle deletes separate from updates and creates in `Pipeline#run()`
  * Add `Indexer#delete()` method to handle deletes
* Refactor `Pipeline` class to extract small methods from `#run()`
* Expand indexer unit test to cover changes made to `Indexer` class
* Expand pipeline unit test to cover changes made to `Pipeline` class
* Update integration test to cover delete case
* Rename fakes to better reflect the domain language used elsewhere in the codebase:
  * Request fakes are agent fakes
  * Indexer fakes are client fakes
* Add `#delete()` method to client fakes
* Use `jest-mock-console` to eat log output (to tidy up test suite runs)
* Make CI build fail if integration tests fail (via using `docker-compose run`)
* Make CodeClimate ignore code smells in tests and mocks
* Fix `curl` incantation in README and pointed to Sinopia notes for more examples
* Prefer `case` statements in `switch` block to be indented one level deeper

Fixes #2
Fixes #4

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,11 +41,8 @@ jobs:
             npm run ci
             ./cc-test-reporter after-build --exit-code $?
       - run:
-          name: Spin up containers for integration testing
-          command: docker-compose up -d pipeline
-      - run:
           name: Run integration tests
-          command: docker-compose up integration
+          command: docker-compose run integration
   register_image:
     <<: *defaults
     steps:
