--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "ci": "npm run lint && npm run coverage",
     "coverage": "jest --color --coverage",
     "dev-start": "nodemon --exec babel-node runner.js",
-    "integration": "jest --color --testRegex=\\.integration\\.js$",
+    "integration": "jest --color --testRegex=\\.integration\\.js$ --detectOpenHandles",
     "lint": "eslint --color -c .eslintrc.yml --ext js .",
     "start": "babel-node runner.js",
     "test": "jest --color"
@@ -38,6 +38,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-takeoff": "0.0.1",
     "jest": "^24.1.0",
+    "jest-mock-console": "^0.4.2",
     "nodemon": "^1.18.10"
   }
 }
