--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@babel/runtime": "^7.3.4",
     "elasticsearch": "^15.4.1",
     "stomp-client": "^0.9.0",
-    "superagent": "^4.1.0"
+    "superagent": "^4.1.0",
+    "url-parse": "^1.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
