Distinguish between RDF and non-RDF resource when indexing
Fixes #15

Also includes:

* Declare non-RDF mime type and LDP URI in config and make them overrideable
* Distinguish between resource and non-RDF index names in application configuration
* Pass (LDP) types explicitly from pipeline to indexer
* Make pipeline runner wait for dependent services using `wait-on` library rather than handling this in the docker-compose configuration (in preparation for handling start-up wait times in production-like environments)
* Add docker CMD as default action when starting container now that pipeline runner knows how to wait for services it depends on
* Add integration test coverage for non-RDF use case
* Add AWS/Cognito-related env variables to docker-compose configuration
* Bump up to node 10.15.x per sinopia_acl
* Prefer `const` over `let` for variables that do not vary

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ services:
   broker:
     image: rmohr/activemq
     ports:
-      - 61616:61616
       - 61613:61613
       - 8161:8161
   platform:
@@ -12,6 +11,8 @@ services:
       TRELLIS_BASE_URL: http://platform:8080
       TRELLIS_LOGGING_LEVEL: INFO
       TRELLIS_CONSOLE_LOGGING_THRESHOLD: INFO
+      COGNITO_USER_POOL_ID: ${COGNITO_USER_POOL_ID:-us-west-2_CGd9Wq136}
+      AWS_REGION: ${AWS_REGION:-us-west-2}
     ports:
       - 8080:8080
       - 8081:8081
@@ -25,7 +26,6 @@ services:
     environment:
       INDEX_HOST: search
       BROKER_HOST: broker
-    command: dockerize -wait tcp://broker:61613 -wait tcp://search:9200 -timeout 3m npm start
     depends_on:
       - broker
       - search
