--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "elasticsearch": "^15.4.1",
     "stomp-client": "^0.9.0",
     "superagent": "^4.1.0",
-    "url-parse": "^1.4.4"
+    "url-parse": "^1.4.4",
+    "wait-on": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
@@ -37,7 +38,7 @@
     "eslint": "^5.13.0",
     "eslint-plugin-jest": "^22.3.0",
     "eslint-plugin-node": "^8.0.1",
-    "eslint-takeoff": "0.0.1",
+    "eslint-takeoff": "0.0.3",
     "jest": "^24.1.0",
     "jest-mock-console": "^0.4.2",
     "nodemon": "^1.18.10"
