Fixes LD4P/sinopia_server#45
Includes:

* Add Crawler and Reindexer classes to handle bulk of reindexing work
* Add ability to Indexer to recreate indices when reindexing
* Add `bin/reindex` task and wrap a new `docker-compose` service around it for testing
* Extract Waiter class from runner so that it can be used in runner and reindexing work, and add tests
* Move type-checking functionality into the Request class
* Remove `body()` from Request and add `response()` to expose both response bodies and headers
* Use consistent capitalization, matching filename to class name
* Name files (mocks in particular) consistently
* Add optional chaining proposal via Babel (safe navigation/"Elvis" operator)
* Prefer `it()` to `test()` when test descriptions are verb-y (like RSpec)
* Use `test.todo()` for tests we haven't figured out how to write yet
* Collect coverage from all JS files under `src/`

--- a/.babelrc
+++ b/.babelrc
@@ -2,9 +2,14 @@
   "presets": [
     "@babel/preset-env"
   ],
+  "plugins": [
+    "@babel/plugin-proposal-optional-chaining"
+  ],
   "env": {
     "test": {
-      "plugins": ["@babel/plugin-transform-runtime"]
+      "plugins": [
+        "@babel/plugin-transform-runtime"
+      ]
     }
   }
 }
