Ignore .env file in version control and when building docker images
We now use the .env file to configure docker-compose and it contains sensitive values; do not push this file anywhere.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,8 @@
+.dockerignore
+.env
+.node-version
+.nvmrc
+Dockerfile
+coverage
 node_modules
 npm-debug.log
-Dockerfile
-.dockerignore
-.node-version
