--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/runtime": "^7.3.4",
     "elasticsearch": "^15.4.1",
+    "jsonpath-plus": "^0.20.1",
     "stomp-client": "^0.9.0",
     "superagent": "^4.1.0",
     "url-parse": "^1.4.4",
