--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/runtime": "^7.3.4",
+    "config": "^3.1.0",
     "elasticsearch": "^15.4.1",
     "jsonpath-plus": "^0.20.1",
     "stomp-client": "^0.9.0",
