--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   "repository": "github:LD4P/sinopia_indexing_pipeline",
   "scripts": {
     "ci": "npm run lint && npm run coverage",
-    "coverage": "jest --colors --coverage",
+    "coverage": "ALLOW_CONFIG_MUTATIONS=true jest --colors --coverage",
     "dev-start": "nodemon --exec babel-node runner.js",
-    "integration": "jest --colors --testRegex=\\.integration\\.js$",
+    "integration": "ALLOW_CONFIG_MUTATIONS=true jest --colors --testRegex=\\.integration\\.js$",
     "lint": "eslint --color -c .eslintrc.yml --ext js .",
     "start": "babel-node runner.js",
-    "test": "jest --colors"
+    "test": "ALLOW_CONFIG_MUTATIONS=true jest --colors"
   },
   "dependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
