--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "dev-start": "nodemon --exec babel-node runner.js",
     "integration": "ALLOW_CONFIG_MUTATIONS=true jest --colors --testRegex=\\.integration\\.js$",
     "lint": "eslint --color -c .eslintrc.yml --ext js .",
+    "lint-fix": "eslint --color -c .eslintrc.yml --ext js --fix .",
     "search": "npx babel-node search.js",
     "start": "npx babel-node runner.js",
-    "test": "ALLOW_CONFIG_MUTATIONS=true jest --colors"
+    "test": "ALLOW_CONFIG_MUTATIONS=true jest --colors --runInBand"
   },
   "dependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
