For resources, uses URI as label if no title. Changes so that can separately config indexing of resource and resource templates, and ignore containers.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,7 @@ services:
     depends_on:
       - pipeline
   database:
-    image: postgres:latest
+    image: postgres:11
     environment:
       POSTGRES_USER: sinopia
       POSTGRES_DB: sinopia
