--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "dependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/runtime": "^7.3.4",
+    "@elastic/elasticsearch": "^6.8.3",
     "config": "^3.1.0",
-    "elasticsearch": "^16.4.0",
     "jsonpath-plus": "^1.1.0",
     "stomp-client": "^0.9.0",
     "superagent": "^5.1.0",
