--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonpath-plus": "^1.1.0",
     "stomp-client": "^0.9.0",
     "superagent": "^5.1.0",
+    "tiny-async-pool": "^1.0.4",
     "url-parse": "^1.4.4",
     "wait-on": "^3.2.0"
   },
