Add Honeybadger notification to all errors logged
Fixes #111

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs:
           name: Build & Register Images
           # NOTE: the env variables holding docker credentials are stored in the CircleCI dashboard
           command: |
-            docker build -t ld4p/sinopia_indexing_pipeline:latest .
+            docker build -t ld4p/sinopia_indexing_pipeline:latest --build-arg HONEYBADGER_API_KEY=$HONEYBADGER_API_KEY .
             echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
             docker push ld4p/sinopia_indexing_pipeline:latest
   register_tag_image:
@@ -77,7 +77,7 @@ jobs:
       - run:
           name: Build & Register Images
           command: |
-            docker build -t ld4p/sinopia_indexing_pipeline:$CIRCLE_TAG .
+            docker build -t ld4p/sinopia_indexing_pipeline:$CIRCLE_TAG --build-arg HONEYBADGER_API_KEY=$HONEYBADGER_API_KEY .
             echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
             docker push ld4p/sinopia_indexing_pipeline:$CIRCLE_TAG
   update_ecs:
