--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/runtime": "^7.3.4",
     "@elastic/elasticsearch": "^7.4.0",
     "config": "^3.1.0",
+    "honeybadger": "^1.3.0",
     "jsonpath-plus": "^1.1.0",
     "stomp-client": "^0.9.0",
     "superagent": "^5.1.0",
