--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,9 +74,7 @@ services:
     ports:
       - 5432:5432
   search:
-    build:
-      context: .
-      dockerfile: Dockerfile-es
+    image: ld4p/sinopia_elasticsearch:latest
     entrypoint:
       - elasticsearch
       - -Ehttp.port=9200
