--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-utils": ">=1.4.1",
     "jest": "^24.1.0",
     "jest-mock-console": "^1.0.0",
+    "minimist": "^1.2.5",
     "nodemon": "^2.0.1"
   }
 }
