--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
   ],
   "repository": "github:LD4P/sinopia_indexing_pipeline",
   "scripts": {
-    "ci": "npm run lint && npm run coverage",
+    "ci": "npm run eslint && npm run coverage",
     "coverage": "ALLOW_CONFIG_MUTATIONS=true jest --colors --coverage",
     "dev-start": "nodemon --exec babel-node runner.js",
     "integration": "ALLOW_CONFIG_MUTATIONS=true jest --colors --testRegex=\\.integration\\.js$",
-    "lint": "eslint --color -c .eslintrc.yml --ext js .",
-    "lint-fix": "eslint --color -c .eslintrc.yml --ext js --fix .",
-    "search": "npx babel-node search.js",
+    "eslint": "eslint --color -c .eslintrc.yml --ext js .",
+    "eslint-fix": "eslint --color -c .eslintrc.yml --ext js --fix .",
     "start": "npx babel-node runner.js",
     "test": "ALLOW_CONFIG_MUTATIONS=true jest --colors --runInBand"
   },
@@ -29,12 +28,13 @@
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/runtime": "^7.11.2",
     "@elastic/elasticsearch": "^7.9.0",
+    "@rdfjs/parser-jsonld": "^1.2.1",
     "config": "^3.3.1",
     "honeybadger": "^1.4.0",
-    "jsonpath-plus": "^2.0.0",
-    "stomp-client": "^0.9.0",
-    "superagent": "^5.3.1",
-    "tiny-async-pool": "^1.0.4",
+    "lodash": "^4.17.20",
+    "mongodb": "^3.6.0",
+    "promise-retry": "^2.0.1",
+    "rdf-ext": "^1.3.0",
     "url-parse": "^1.4.4",
     "wait-on": "^3.2.0"
   },
@@ -43,6 +43,7 @@
     "@babel/node": "^7.10.5",
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
+    "@beyonk/promise-retry": "^0.1.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^24.1.0",
     "eslint": "^6.5.1",
