--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,17 +15,17 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependencies-prod-{{ checksum "package.json" }}
+          key: dependencies-prod-{{ checksum "package-lock.json" }}
       - run: npm install --only=production
       - save_cache:
-          key: dependencies-prod-{{ checksum "package.json" }}
+          key: dependencies-prod-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
       - restore_cache:
-          key: dependencies-ci-{{ checksum "package.json" }}
+          key: dependencies-ci-{{ checksum "package-lock.json" }}
       - run: npm install # including CI/Test dependencies
       - save_cache:
-          key: dependencies-ci-{{ checksum "package.json" }}
+          key: dependencies-ci-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
   build:
@@ -33,7 +33,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependencies-ci-{{ checksum "package.json" }}
+          key: dependencies-ci-{{ checksum "package-lock.json" }}
       - run:
           name: Setup Code Climate test-reporter
           command: |
@@ -55,7 +55,7 @@ jobs:
       - checkout
       - setup_remote_docker
       - restore_cache: # gives us back matching node_modules
-          key: dependencies-prod-{{ checksum "package.json" }}
+          key: dependencies-prod-{{ checksum "package-lock.json" }}
       - attach_workspace:
           at: .
       - run:
@@ -73,7 +73,7 @@ jobs:
       - checkout
       - setup_remote_docker
       - restore_cache: # gives us back matching node_modules
-          key: dependencies-prod-{{ checksum "package.json" }}
+          key: dependencies-prod-{{ checksum "package-lock.json" }}
       - attach_workspace:
           at: .
       - run:
