pin to version of ES client compatible with our deployed elasticsearch instance
correctly, this time

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.14.5",
     "@babel/runtime": "^7.15.3",
-    "@elastic/elasticsearch": "^7.13.0",
+    "@elastic/elasticsearch": "7.13.0",
     "@rdfjs/parser-jsonld": "^1.2.1",
     "config": "^3.3.6",
     "honeybadger": "^1.4.0",
